# lymals

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  Taskfile.yml  deny.toml  luma-rename.ps1  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
benches/: parse_index.rs
docs/: commands.md  configuration.md  development.md  feature-matrix.md  packaging.md  security.md  troubleshooting.md  upstream-luma.md  upstream-lyma.md
editors/: neovim.md
editors/vscode/: .vscodeignore  CHANGELOG.md  README.md  extension.ts  language-configuration.json  package-lock.json  package.json  tsconfig.json
src/: ast.rs  capabilities.rs  cli.rs  code_actions.rs  commands.rs  completion.rs  config.rs  diagnostics.rs  document.rs  eval.rs  folding.rs  formatting.rs  hover.rs  imports.rs  index.rs  inlay_hints.rs  lexer.rs  lib.rs  logging.rs  main.rs  navigation.rs  position.rs  references.rs  rename.rs  selection_ranges.rs  semantic.rs  semantic_tokens.rs  server.rs  state.rs  symbols.rs  syntax.rs  tasks.rs  workspace.rs
src/handlers/: code_actions.rs  commands.rs  completion.rs  diagnostics.rs  folding.rs  formatting.rs  hover.rs  inlay_hints.rs  navigation.rs  references.rs  rename.rs  selection_ranges.rs  symbols.rs  (+4 more)
tests/: .document_symbols_tests.rs.pending-snap  .semantic_tokens_tests.rs.pending-snap  client_compat_tests.rs  code_actions_tests.rs  commands_tests.rs  completion_tests.rs  concurrency_tests.rs  config_tests.rs  conformance_tests.rs  diagnostics_tests.rs  document_symbols_tests.rs  eval_tests.rs  folding_tests.rs  formatting_tests.rs  hover_tests.rs  imports_tests.rs  inlay_hints_tests.rs  logging_tests.rs  lsp_binary_stdio_tests.rs  lsp_harness.rs  lsp_lifecycle_tests.rs  lsp_sync_tests.rs  navigation_tests.rs  parser_tests.rs  performance_tests.rs  position_tests.rs  references_tests.rs  rename_tests.rs  robustness_tests.rs  selection_ranges_tests.rs  semantic_tests.rs  semantic_tokens_tests.rs  workspace_symbols_tests.rs  workspace_tests.rs
(+73 files in other folders)
