[package]
name = "lumals"
version = "0.0.0"
edition = "2024"
rust-version = "1.85"
description = "Parse-only Luma language server"
license = "MIT"
# Guardrail: v1 distributes binary archives only. Do not publish a crate until
# versioning, licensing, and release artifact validation policy is completed.
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "lumals"
path = "src/main.rs"

[[bench]]
name = "parse_index"
harness = false

[features]
# v1 stays parse-only by default. Future tasks can layer richer backends behind
# these flags without changing the non-evaluating default behavior.
default = ["parse-only", "fallback-parser"]
parse-only = []
fallback-parser = []
# Reserved for future direct upstream integration; disabled by default so the
# standalone binary keeps a local/fallback parser path.
upstream-luma = ["dep:luma", "luma/parser"]
# Reserved extension point for a future non-default evaluation stub/integration.
eval = []

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
luma = { git = "https://github.com/metakernel/luma", rev = "fab0c21b1e32b837a37a8ef738fd2b64364d6f81", optional = true, default-features = false }
miette = { version = "7.4", features = ["fancy-no-backtrace"] }
parking_lot = "0.12"
ropey = "1.6"
schemars = { version = "0.8", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.44", features = ["io-std", "io-util", "macros", "rt-multi-thread", "sync", "time"] }
tower-lsp = "0.20"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "std"] }

[dev-dependencies]
assert_matches = "1.5"
insta = { version = "1.42", features = ["glob", "redactions"] }
pretty_assertions = "1.4"
proptest = "1.6"
similar = "2.7"
tempfile = "3.15"

[profile.release]
codegen-units = 1
lto = "thin"
strip = "symbols"
